# cuga-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.ubi  README.md  design.html  design.md  pyproject.toml  todos.md
.github/workflows/: deploy-image-ghcr.yml  deploy-image.yml  smoke-pip-install.yml  stability-tests.yml
deployment/: README.md
deployment/certs/: README.md
deployment/helm/: cleanup-openshift.sh  deploy-openshift.sh  openshift.example.env  status-openshift.sh
deployment/helm/cuga/: values.yaml
deployment/helm/cuga/templates/: deployment.yaml
deployment/helm/postgres-pgvector/: values.yaml
deployment/helm/vault/: Chart.yaml  values.openshift.yaml  values.yaml
deployment/helm/vault/templates/: NOTES.txt
docs/examples/cuga_as_mcp/: pyproject.toml
docs/examples/cuga_with_runtime_tools/: pyproject.toml
docs/examples/demo_apps/crm/: pyproject.toml
docs/examples/demo_apps/email_mcp/mcp_server/: pyproject.toml
docs/examples/demo_apps/setup/: README.md  cli.py
docs/examples/docs_mcp/: docs_mcp_server.py
scripts/: deploy-image.sh  docker-entrypoint.sh  smoke_pip_install_isolated.sh
src/cuga/: __init__.py  cli.py  config.py  sdk.py  settings.toml
src/cuga/backend/cuga_graph/: graph.py
src/cuga/backend/cuga_graph/nodes/answer/: final_answer.py
src/cuga/backend/cuga_graph/nodes/browser/: action.py
src/cuga/backend/cuga_graph/nodes/cuga_lite/: __init__.py  combined_tool_provider.py  cuga_lite_graph.py  cuga_lite_node.py  model_runtime_profile.py  prompt_utils.py
src/cuga/backend/cuga_graph/nodes/cuga_supervisor/: __init__.py  a2a_protocol.py  cuga_supervisor_graph.py  cuga_supervisor_node.py  cuga_supervisor_state.py
src/cuga/backend/cuga_graph/nodes/human_in_the_loop/: followup_model.py
src/cuga/backend/cuga_graph/nodes/innovation/: research_agent.py  research_node.py
src/cuga/backend/cuga_graph/nodes/shared/: base_agent.py
src/cuga/backend/cuga_graph/nodes/task_decomposition_planning/: analyze_task.py  plan_controller.py
src/cuga/backend/cuga_graph/policy/: storage.py
src/cuga/backend/cuga_graph/policy/tests/: helpers.py  test_similarity_integration.py
src/cuga/backend/cuga_graph/state/: agent_state.py
src/cuga/backend/cuga_graph/utils/: agent_loop.py  context_management_utils.py  context_summarizer.py  message_utils.py  nodes_names.py  token_counter.py
src/cuga/backend/evolve/: integration.py
src/cuga/backend/evolve/tests/: test_integration.py
src/cuga/backend/knowledge/: engine.py  routes.py
src/cuga/backend/llm/: config.py  models.py
src/cuga/backend/llm/utils/: helpers.py
src/cuga/backend/secrets/: __init__.py  models.py  secret_resolver.py  seed.py
src/cuga/backend/secrets/backends/: __init__.py  aws_backend.py  base.py  db_backend.py  env_backend.py  vault_backend.py
src/cuga/backend/server/: demo_manage_setup.py  main.py  manage_routes.py  secrets_routes.py
src/cuga/backend/server/auth/: __init__.py  dependencies.py  issuer_allowlist.py  jwt_validator.py  models.py  oidc_client.py
src/cuga/backend/storage/: secrets_store.py
src/cuga/backend/storage/embedding/: embedding_service.py
src/cuga/backend/tools_env/registry/config/: supervisor_demo_crm.yaml
src/cuga/backend/tools_env/registry/mcp_manager/: adapter.py  mcp_manager.py
src/cuga/cli/: app_manager.py  main.py
src/cuga/demo_tools/: __init__.py
src/cuga/demo_tools/crm/: .gitignore  MANIFEST.in  README.md  pyproject.toml  run.py  run_tests.py  wrap_as_mcp.py
src/cuga/demo_tools/crm/crm_api/: accounts.py  contacts.py  crud.py  database.py  leads.py  main.py  opportunities.py  run_all.py  schemas.py  seed_data.py  wrap_as_mcp.py
src/cuga/demo_tools/crm/tests/: conftest.py  test_contacts.py  test_workspace_workflow.py
src/cuga/demo_tools/email_mcp/mail_sink/: .gitignore  pyproject.toml  server.py
src/cuga/demo_tools/email_mcp/mcp_server/: pyproject.toml  server.py  utils.py
src/cuga/demo_tools/file_system/: main.py  pyproject.toml
src/cuga/demo_tools/health/: README.md
src/cuga/demo_tools/huggingface/: contacts.txt  cuga_knowledge.md  cuga_playbook.md  email_template.md
src/cuga/sdk_core/tests/: conversation_messages.json  test_context_summarization_sdk.py  test_sdk_integration.py  test_supervisor_advanced.py  test_supervisor_yaml_config.py
src/cuga/sdk_core/tests/fixtures/: supervisor_config.yaml
src/cuga/supervisor_utils/: __init__.py  supervisor_config.py
src/frontend_workspaces/: package.json  pnpm-lock.yaml
src/frontend_workspaces/agentic_chat/: package.json
src/frontend_workspaces/agentic_chat/src/: AgentBehaviorConfig.tsx  AgentHumanConfig.tsx  CardManager.tsx  ConfigHeader.tsx  CugaHeader.css  CugaHeader.tsx  CustomChat.css  CustomChat.tsx  DebugPanel.tsx  Followup.tsx  KnowledgeConfig.tsx  LeftSidebar.tsx  MemoryConfig.tsx  ModelConfig.tsx  PoliciesConfig.tsx  StatusBar.tsx  StreamManager.tsx  StreamingManager.ts  SubAgentsConfig.tsx  ToolsConfig.tsx  WorkspacePanel.tsx  constants.ts  downloadUtils.ts  final_answer_component.tsx  workspaceService.ts
src/frontend_workspaces/extension/releases/chrome-mv3/: background.js  sidepanel.html
src/frontend_workspaces/frontend/: build.sh  webpack.config.js
src/frontend_workspaces/frontend/src/: AddToolModal.css  AddToolModal.tsx  App.tsx  ChatLanding.tsx  ConfigHeader.tsx  CugaHeader.css  CugaHeader.tsx  ManageDashboard.tsx  ManagePage.tsx  SecretsManager.tsx  ToolsConfig.css  ToolsConfig.tsx  api.ts  auth.ts
src/frontend_workspaces/frontend/src/carbon-chat/: CarbonChat.css  CarbonChat.tsx  carbonChatHelpers.ts  customLoadHistory.ts  customSendMessage.ts
src/scripts/: build_embedded.py  embed_assets.py  preload_models.py  run_tests.sh
src/system_tests/e2e/: base_crm_test.py  crm_contacts_email_test.py  test_context_summarization_e2e.py
tests/integration/: test_context_summarization.py  test_llm_config_publish.py
tests/system/: test_manager_api_integration.py
tests/unit/: test_context_summarizer.py  test_llm_override.py  test_token_counter.py
(+78 files in other folders)
