[project]
name = "cuga"
version = "0.2.9"
description = "CUGA is an open-source generalist agent for the enterprise, supporting complex task execution on web and APIs, OpenAPI/MCP integrations, composable architecture, reasoning modes, and policy-aware features."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.3.31",
    "langchain-core>=1.2.13",
    "langchain-ibm>=0.3.9",
    "langchain-openai",
    "aiohttp",
    "httpx",
    "docker",
    "langgraph",
    "html2text",
    "uvicorn",
    "fastapi[standard]",
    "langfuse",
    "dynaconf",
    "playwright>=1.49.0",
    "browsergym-core==0.13.0",
    "python-dotenv",
    "loguru",
    "mcp[cli]>=1.23.0",
    "psutil>=7.0.0",
    "typer>=0.15.3",
    "fastmcp",
    "langchain-mcp-adapters",
    "pyyaml>=6.0.3",
    "pymilvus[milvus-lite,model]>=2.6.4",
    "langchain-groq>=0.3.8",
    "tavily-python",
    "torch>=2.2.2",
    "sentence-transformers>=5.1.2",
    "a2a-sdk[http-server]>=0.3.22",
    "gpt-researcher>=0.14.6",
    "ddgs>=9.10.0",
    "langchain-huggingface>=1.2.0",
    "setuptools<70.0.0",
]

[project.optional-dependencies]
evaluation = ["rapidfuzz"]
e2b = ["e2b-code-interpreter>=2.4.1"]

memory = ["mem0ai[extras]"]

[project.urls]
Homepage = "https://cuga.dev"
Repository = "https://github.com/cuga-project/cuga-agent"

[project.scripts]
cuga = "cuga.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
