[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filesystem-mcp-server"
version = "0.1.1"
description = "Secure MCP Filesystem Server - Python implementation using FastMCP"
license = "Apache-2.0"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastmcp>=3.2.0"
]

[tool.uv]
package = true

[project.scripts]
filesystem-server = "main:main"

[tool.setuptools]
py-modules = ["main"]

