[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_mcp"
version = "0.1.3"
description = "MCP Server for email"
license = "Apache-2.0"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pydantic",
    "fastmcp>=3.2.0"
]

[tool.uv]
package = true

[project.scripts]
email_mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "utils"]
